--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Niconne&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/0718da0605.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
+    <h1>Andrea Hitchin</h1>
     
 </body>
 </html>
