--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Andrea Hitchin</h1>
+    <div class="d-flex bg-warning">
+    <h1>Hello world</h1>
+    <p>Hi there</p>
+    <i class="fab fa-instagram"></i>
+    </div>
     
 </body>
 </html>
