--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="d-flex bg-warning">
-    <h1>Hello world</h1>
-    <p>Hi there</p>
-    <i class="fab fa-instagram"></i>
-    </div>
+    <h2>👋 Hello, I am</h2>
+    <h1>Andrea Hitchin</h1>
+    <h3>Front-end developer based in Europe</h3>
     
 </body>
 </html>
