--- a/index.html
+++ b/index.html
@@ -17,9 +17,16 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="hero">
     <h2>👋 Hello, I am</h2>
     <h1>Andrea Hitchin</h1>
     <h3>Front-end developer based in Europe</h3>
+
+    <div class="navigation-links">
+        <a href="about.html" class="about-link" alt="about-button">About me</a>
+        <a href="about.html#contact" class="contact-link" alt="contact-button">Contact me</a>
+    </div>
+    </div>
     
 </body>
 </html>
