--- a/index.html
+++ b/index.html
@@ -14,9 +14,54 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Niconne&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/0718da0605.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Front-end developer - Andrea Hitchin</title>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed top">
+    <div class="container">
+        <a class="navbar-brand" href="/" title="Homepage">Andrea Hitchin</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Homepage"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/about.html"
+                title="About Andrea Hitchin"
+                >About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact Andrea Hitchin"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="hero">
     <h2>👋 Hello, I am</h2>
     <h1>Andrea Hitchin</h1>
@@ -27,6 +72,53 @@
         <a href="about.html#contact" class="contact-link" alt="contact-button">Contact me</a>
     </div>
     </div>
+    <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="/images/yoga.png"
+              alt="Yoga project"
+              class="img-fluid rounded"
+            />
+          </div>
+          <div class="col-md-6">
+            <h2 class="mb-3">Yoga app</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+              quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+              eos eveniet alias temporibus deserunt veritatis minima fugiat
+              explicabo eum dolore.
+            </p>
+            <div class="mt-5">
+              <a href="#" class="btn btn-primary p-3 mt-3" title="Yoga project">
+                Launch Yoga App</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-md-6">
+            <h2 class="mb-3">Weather app</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+              quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+              eos eveniet alias temporibus deserunt veritatis minima fugiat
+              explicabo eum dolore.
+            </p>
+            <div class="mb-5 mt-5">
+              <a href="#" class="btn btn-primary p-3 mt-3" title="Weather project"
+                >Launch Weather App</a
+              >
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img
+              src="/images/weather.png"
+              class="img-fluid rounded"
+              alt="Weather project"
+            />
+          </div>
+        </div>
     
 </body>
 </html>
