changed the pictures for the projects

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="/" title="Homepage">Andrea Hitchin</a>
         <button
@@ -64,38 +64,26 @@
         </div>
       </div>
     </nav>
+
     <h1>About me</h1>
     <h3>Front-end developer from Amsterdam, Netherlands</h3>
-    <div class="about-paragraphs">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-        quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos
-        eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum
-        dolore.
-      </p>
-    </div>
+     
     <div class="container">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-6">
           <img
-            src="/images/yoga.png"
+            src="/images/gothic project.png"
             class="img-fluid p-2 shadow rounded"
             alt="Yoga project"
           />
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-6">
           <img
-            src="/images/weather.png"
+            src="/images/weather project.png"
             class="img-fluid p-2 shadow rounded"
             alt="Weather project"
           />
         </div>
-        <div class="col-sm-4">
-          <img
-            src="/images/yogurt.png"
-            class="img-fluid p-2 shadow rounded"
-            alt="Yogurt project"
-          />
         </div>
       </div>
     </div>
