--- a/index.html
+++ b/index.html
@@ -76,49 +76,40 @@
         <div class="row">
           <div class="col-md-6">
             <img
-              src="/images/yoga.png"
+              src="/images/gothic project.png"
               alt="Yoga project"
               class="img-fluid rounded"
             />
           </div>
           <div class="col-md-6">
-            <h2 class="mb-3">Yoga app</h2>
+            <h2 class="mb-3">Gothic Fashion Webpage</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-              quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-              eos eveniet alias temporibus deserunt veritatis minima fugiat
-              explicabo eum dolore.
+              My first small webpage that I created.
             </p>
             <div class="mt-5">
               <a href="#" class="btn btn-primary p-3 mt-3" title="Yoga project">
-                Launch Yoga App</a
+                Launch Webpage</a
               >
             </div>
           </div>
         </div>
         <div class="row mt-5">
-          <div class="col-md-6">
-            <h2 class="mb-3">Weather app</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-              quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-              eos eveniet alias temporibus deserunt veritatis minima fugiat
-              explicabo eum dolore.
-            </p>
-            <div class="mb-5 mt-5">
-              <a href="#" class="btn btn-primary p-3 mt-3" title="Weather project"
-                >Launch Weather App</a
-              >
+            <div class="col-md-6">
+              <h2 class="mb-3">Weather app</h2>
+              <p>
+              Live weather app
+              </p>
+              <div class="mb-5 mt-5">
+                <a href="#" class="btn btn-primary p-3 mt-3" title="Weather project"
+                  >Launch Weather App</a
+                >
+              </div>
             </div>
-          </div>
-          <div class="col-md-6">
-            <img
-              src="/images/weather.png"
-              class="img-fluid rounded"
-              alt="Weather project"
-            />
-          </div>
-        </div>
-    
-</body>
-</html>
+            <div class="col-md-6">
+                <img
+                  src="/images/weather project.png"
+                  class="img-fluid rounded"
+                  alt="Weather project"
+                />
+              </div>
+            </div>
