added an icon and email link in html

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed top">
     <div class="container">
-        <a class="navbar-brand" href="/" title="Homepage">Andrea Hitchin</a>
-        <button
+        <a class="navbar-brand" href="/" title="Homepage"><i class="fas fa-barcode"></i></a>
+         <button
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
@@ -113,3 +113,8 @@
                 />
               </div>
             </div>
+            <div class="container">
+              <footer class="text-center">
+                <a href="mailto:andrea.hitchin@gmail.com" id="email" title="email Andrea">andrea.hitchin@gmail.com</a>
+          </body>
+          </html>
