--- a/about.html
+++ b/about.html
@@ -17,22 +17,73 @@
   <title>Document</title>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed top">
+    <div class="container">
+        <a class="navbar-brand" href="/" title="Homepage"><i class="fas fa-barcode"></i></a>
+         <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Homepage"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/about.html"
+                title="About Andrea Hitchin"
+                >About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact Andrea Hitchin"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   <div class="about-section container">
     <div class="row">
       <div class="col-lg-6">
         <div class="about-section-content">
-          <h1 class="mb-4">Hello. I'm Andrea Hitchin</h1>
+          <h1 class="mb-4">Hello, I'm Andrea Hitchin</h1>
           <h3 class="mb-4">Front-end developer, based in Europe.</h3>
           <p class="mb-5">
             I recommend for anyone who's interested in learning code to join the SheCodes workshops, they are very interesting, and a little bit challenging, you get different challenges after the classes and the deadlines help you stay on track.
           </p>
-          <a href class="btn btn-branding">See my projects</a>
+          <a href class="btn btn-primary">See my projects</a>
           </div>
           </div>
           <div class="col-lg-6">
-          <img src="images/" alt class="img-fluid">
+          <img src="images/dre.jpg" alt class="img-fluid">
           </div>
           </div>
+          </div>
+          <div class="container">
+            <footer class="text-center">
+          <a href="mailto:andrea.hitchin@gmail.com" id="email" title="email Andrea">andrea.hitchin@gmail.com</a> 
+             
+            </footer>
           </div>
         </body>
 </html>
