--- a/about.html
+++ b/about.html
@@ -82,7 +82,9 @@
           <div class="container">
             <footer class="text-center">
           <a href="mailto:andrea.hitchin@gmail.com" id="email" title="email Andrea">andrea.hitchin@gmail.com</a> 
-             
+          <p class="text-center mt-4 githublink">
+            😄 This project was coded by Andrea and it's <a href="https://github.com/00Dre00/portfolio-project" target="_blank">open sourced </a>😄
+          </p>
             </footer>
           </div>
         </body>
