input work.html

--- a/index.html
+++ b/index.html
@@ -50,13 +50,23 @@
                 >About</a
               >
             </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/about.html#contact"
-                title="Contact Andrea Hitchin"
-                >Contact</a
               >
+            </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="/work.html"
+                  title="Andrea's work"
+                  >Work</a
+                >
+                <li class="nav-item">
+                  <a
+                    class="nav-link"
+                    href="/about.html#contact"
+                    title="Contact Andrea Hitchin"
+                    >Contact</a
+                  >
+              </li>
             </li>
           </ul>
         </div>
