--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Niconne&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/0718da0605.js" crossorigin="anonymous"></script>
-  <title>Document</title>
+  <title>Andrea Hitchin</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed top">
@@ -53,6 +53,13 @@
             <li class="nav-item">
               <a
                 class="nav-link"
+                href="/work.html"
+                title="Andrea's work"
+                >Work</a
+              >
+            <li class="nav-item">
+              <a
+                class="nav-link"
                 href="/about.html#contact"
                 title="Contact Andrea Hitchin"
                 >Contact</a
@@ -75,7 +82,7 @@
           </div>
           </div>
           <div class="col-lg-6">
-          <img src="images/dre.jpg" alt class="img-fluid">
+          <img src="images/dre.jpg" alt class="img-fluid rounded">
           </div>
           </div>
           </div>
