changed the links

--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,11 @@
  <div class="content-container container">
      <div class="content">
          <h2 class="mb-5"> Let's get in contact!</h2>
-         <h3>Email</h3>
+         <h3 class="mail">Email</h3>
          <p>
              <a href="mailto:andrea.hitchin@gmail.com">andrea.hitchin@gmail.com</a>
          </p>
-         <h3>Linked In</h3>
+         <h3 class="link">Linked In</h3>
          <p>
              <a href="https://www.linkedin.com/in/andrea-hitchin-484940167/" target="_blank">andrea hitchin</a>
          </p>
