--- a/about.html
+++ b/about.html
@@ -14,61 +14,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Niconne&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/0718da0605.js" crossorigin="anonymous"></script>
-  <title>Andrea Hitchin</title>
+  <title>About Andrea Hitchin</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed top">
-    <div class="container">
-        <a class="navbar-brand" href="/" title="Homepage"><i class="fas fa-barcode"></i></a>
-         <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/"
-                title="Homepage"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/about.html"
-                title="About Andrea Hitchin"
-                >About</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/work.html"
-                title="Andrea's work"
-                >Work</a
-              >
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/about.html#contact"
-                title="Contact Andrea Hitchin"
-                >Contact</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+  
   <div class="about-section container">
     <div class="row">
       <div class="col-lg-6">
