--- a/index.html
+++ b/index.html
@@ -17,61 +17,7 @@
     <title>Front-end developer - Andrea Hitchin</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed top">
-    <div class="container">
-        <a class="navbar-brand" href="/" title="Homepage"><i class="fas fa-barcode"></i></a>
-         <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/"
-                title="Homepage"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/about.html"
-                title="About Andrea Hitchin"
-                >About</a
-              >
-            </li>
-              >
-            </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="/work.html"
-                  title="Andrea's work"
-                  >Work</a
-                >
-                <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    href="/about.html#contact"
-                    title="Contact Andrea Hitchin"
-                    >Contact</a
-                  >
-              </li>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+
     <div class="hero">
     <h2>👋 Hello, I am</h2>
     <h1>Andrea Hitchin</h1>
@@ -79,7 +25,7 @@
 
     <div class="navigation-links">
         <a href="about.html" class="about-link" alt="about-button">About me</a>
-        <a href="about.html#contact" class="contact-link" alt="contact-button">Contact me</a>
+        <a href="contact.html" class="contact-link" alt="contact-button">Contact me</a>
     </div>
     </div>
     <div class="container">
