changed the header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,23 @@
     <title>Front-end developer - Andrea Hitchin</title>
 </head>
 <body>
-
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="/" title="Homepage">Andrea</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="navbar-nav ms-auto">
+      <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
+    <a class="nav-link" href="/about.html" title="About Andrea">About</a>
+   <a class="nav-link" href="/work.html" title="Andrea's Work">Work</a>
+   <a class="nav-link" href="/contact.html" title="Contact Andrea">Contact</a>
+  </div>
+  </div>
+  </div>
+</nav>
     <div class="hero">
     <h2>👋 Hello, I am</h2>
     <h1>Andrea Hitchin</h1>
