header for all pages

--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,26 @@
     <title>Contact Andrea Hitchin</title>
 </head>
 <body>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="/" title="Homepage">Andrea</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+          data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="navbar-nav ms-auto">
+            <a class="nav-link" aria-current="page" href="/" title="Homepage">Home</a>
+          <a class="nav-link" href="/about.html" title="About Andrea">About</a>
+         <a class="nav-link" href="/work.html" title="Andrea's Work">Work</a>
+         <a class="nav-link active" href="/contact.html" title="Contact Andrea">Contact</a>
+        </div>
+        </div>
+        </div>
+      </nav>
  <div class="content-container container">
      <div class="content">
-         <h2 class="mb-5"> Let's get in contact!</h2>
+         <h2 class="mb-5 mt-5"> Let's get in contact!</h2>
          <h3 class="mail">Email</h3>
          <p>
              <a href="mailto:andrea.hitchin@gmail.com">andrea.hitchin@gmail.com</a>
