--- a/work.html
+++ b/work.html
@@ -17,10 +17,26 @@
     <title>Andrea Hitchin's Work</title>
 </head>
 <body>
-   
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="/" title="Homepage">Andrea</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+      data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="navbar-nav ms-auto">
+        <a class="nav-link" aria-current="page" href="/" title="Homepage">Home</a>
+      <a class="nav-link" href="/about.html" title="About Andrea">About</a>
+     <a class="nav-link active" href="/work.html" title="Andrea's Work">Work</a>
+     <a class="nav-link" href="/contact.html" title="Contact Andrea">Contact</a>
+    </div>
+    </div>
+    </div>
+  </nav>  
         <div class="container">
             <div class="heading-container m-b-3">
-                <h2 class="text-center mt-3">Have a look at what I've been working on!</h2>
+                <h2 class="text-center  mt-5">Have a look at what I've been working on!</h2>
             </div>
                 <div class="container">
                     <div class="row mt-4">
